--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -22,6 +22,7 @@ jobs:
       contents: read
       pages: write # Required to deploy to GitHub Pages
       id-token: write # Required for OIDC token used by deploy-pages
+    timeout-minutes: 10
     steps:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # 5.0.0
