--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,14 +1,25 @@
 name: 'Chromatic'
+# Opt out of any default permissions
+permissions: {}
 
 on: push
+
+concurrency:
+  group: chromatic-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   chromatic:
     name: Run Chromatic
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      statuses: write
+    timeout-minutes: 15
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # 5.0.0
         with:
           fetch-depth: 0
 
@@ -16,7 +27,7 @@ jobs:
         uses: ./.github/actions/install-packages
 
       - name: Run Chromatic
-        uses: chromaui/action@latest
+        uses: chromaui/action@d0795df816d05c4a89c80295303970fddd247cce # 13.1.4
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           exitZeroOnChanges: true
