--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,35 @@
 name: CI
+# Opt out of any default permissions
+permissions: {}
 
 on:
   push:
     branches: [main]
   pull_request:
+    types: [opened, synchronize, reopened]
+    branches: [main]
 
-env:
-  NXCACHE_S3_BUCKET: ${{ secrets.NXCACHE_S3_BUCKET }}
-  NXCACHE_S3_REGION: ${{ secrets.NXCACHE_S3_REGION }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   ci:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    env:
+      NXCACHE_S3_BUCKET: ${{ secrets.NXCACHE_S3_BUCKET }}
+      NXCACHE_S3_REGION: ${{ secrets.NXCACHE_S3_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    outputs:
+      e2e_changed: ${{ steps.e2e_check.outputs.e2e_changed }}
+    timeout-minutes: 20
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # 5.0.0
         with:
           fetch-depth: 0
 
@@ -41,14 +53,36 @@ jobs:
         run: |
           AFFECTED_E2E=$(pnpm nx show projects --affected --target=e2e)
           if [ -n "$AFFECTED_E2E" ]; then
-            echo "e2e_changed=true" >> $GITHUB_OUTPUT
+            echo "e2e_changed=true" >> "$GITHUB_OUTPUT"
           else
-            echo "e2e_changed=false" >> $GITHUB_OUTPUT
+            echo "e2e_changed=false" >> "$GITHUB_OUTPUT"
           fi
 
+  e2e:
+    needs: ci
+    if: needs.ci.outputs.e2e_changed == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: write # Required by actions/cache to save caches
+    env:
+      NXCACHE_S3_BUCKET: ${{ secrets.NXCACHE_S3_BUCKET }}
+      NXCACHE_S3_REGION: ${{ secrets.NXCACHE_S3_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    timeout-minutes: 30
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # 5.0.0
+        with:
+          fetch-depth: 0
+
+      - name: Install
+        uses: ./.github/actions/install-packages
+
       - name: Cache Playwright
-        if: steps.e2e_check.outputs.e2e_changed == 'true'
-        uses: actions/cache@v3
+        uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # 4.2.4
         with:
           path: ~/.cache/ms-playwright
           key: playwright-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
@@ -56,9 +90,7 @@ jobs:
             playwright-${{ runner.os }}-
 
       - name: Install Playwright
-        if: steps.e2e_check.outputs.e2e_changed == 'true'
-        run: npx playwright install --with-deps
+        run: pnpm exec playwright install --with-deps
 
       - name: End-to-end test
-        if: steps.e2e_check.outputs.e2e_changed == 'true'
         run: pnpm nx affected --target=e2e
