--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,11 @@
 name: Publish
+# Opt out of any default permissions
+permissions: {}
 
 on:
   push:
     tags:
       - v*.*.*
-
-env:
-  NXCACHE_S3_BUCKET: ${{ secrets.NXCACHE_S3_BUCKET }}
-  NXCACHE_S3_REGION: ${{ secrets.NXCACHE_S3_REGION }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
   test:
@@ -19,9 +15,14 @@ jobs:
       contents: read
       id-token: write # needed for provenance data generation
     timeout-minutes: 10
+    env:
+      NXCACHE_S3_BUCKET: ${{ secrets.NXCACHE_S3_BUCKET }}
+      NXCACHE_S3_REGION: ${{ secrets.NXCACHE_S3_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # 5.0.0
         with:
           fetch-depth: 0
           filter: tree:0
