feat(themes): add `ledsagerbevis.tailwind.css` to public api

--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -16,6 +16,7 @@
     "./base.css": "./dist/base.css",
     "./base.tailwind.css": "./dist/base.tailwind.css",
     "./ledsagerbevis.css": "./dist/themes/ledsagerbevis.css",
+    "./ledsagerbevis.tailwind.css": "./dist/themes/ledsagerbevis.tailwind.css",
     "./forvaltning.css": "./dist/themes/forvaltning.css",
     "./forvaltning.tailwind.css": "./dist/themes/forvaltning.tailwind.css"
   },
