--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -18,7 +18,9 @@
     "./ledsagerbevis.css": "./dist/themes/ledsagerbevis.css",
     "./ledsagerbevis.tailwind.css": "./dist/themes/ledsagerbevis.tailwind.css",
     "./forvaltning.css": "./dist/themes/forvaltning.css",
-    "./forvaltning.tailwind.css": "./dist/themes/forvaltning.tailwind.css"
+    "./forvaltning.tailwind.css": "./dist/themes/forvaltning.tailwind.css",
+    "./minkommune.css": "./dist/themes/minkommune.css",
+    "./minkommune.tailwind.css": "./dist/themes/minkommune.tailwind.css"
   },
   "files": [
     "./dist"
