--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -30,5 +30,5 @@ jobs:
         uses: chromaui/action@d0795df816d05c4a89c80295303970fddd247cce # 13.1.4
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          exitZeroOnChanges: true
+          exitZeroOnChanges: false
           autoAcceptChanges: ${{ github.ref == 'refs/heads/main' }}
