--- a/package.json
+++ b/package.json
@@ -26,42 +26,41 @@
     "@nx/storybook": "21.2.0",
     "@nx/vite": "21.2.0",
     "@nx/web": "21.2.0",
-    "@playwright/test": "^1.54.2",
+    "@playwright/test": "^1.56.1",
     "@schematics/angular": "20.0.2",
-    "@storybook/addon-docs": "^9.1.1",
-    "@storybook/angular": "9.0.12",
+    "@storybook/addon-docs": "^9.1.16",
+    "@storybook/angular": "^9.0.12",
     "@swc-node/register": "~1.9.2",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.29",
     "@swc/helpers": "~0.5.17",
     "@testing-library/dom": "10.4.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^20.19.10",
-    "@typescript-eslint/utils": "^8.39.0",
+    "@types/node": "^20.19.25",
+    "@typescript-eslint/utils": "^8.47.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "chromatic": "^13.2.0",
-    "eslint": "^9.33.0",
+    "chromatic": "^13.3.4",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-playwright": "^1.8.3",
     "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.3.0",
+    "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "lint-staged": "^15.5.2",
-    "nx": "21.2.0",
+    "nx": "^21.2.0",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "postcss-import": "^16.1.1",
     "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.2.0",
-    "storybook": "9.1.15",
-    "ts-node": "10.9.1",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "storybook": "^9.1.15",
     "tslib": "^2.8.1",
-    "typescript": "5.8.3",
-    "typescript-eslint": "^8.39.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.47.0",
     "vite": "^6.4.1",
     "vite-plugin-dts": "~4.5.4",
     "vitest": "^3.2.4"
