--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,14 +26,14 @@
   ],
   "dependencies": {
     "@digdir/designsystemet-react": "1.5.1",
-    "@navikt/aksel-icons": "^7.21.1"
+    "@navikt/aksel-icons": "^7.33.4"
   },
   "devDependencies": {
-    "@testing-library/react": "16.1.0",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0"
+    "@testing-library/react": "^16.3.0",
+    "@vitejs/plugin-react-swc": "^3.11.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0"
   },
   "peerDependencies": {
     "react": ">=18.3.1",
