--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@nx/angular": "21.2.0",
-    "@nx/devkit": "21.2.0",
-    "@nx/eslint": "21.2.0",
-    "@nx/eslint-plugin": "21.2.0",
-    "@nx/js": "21.2.0",
-    "@nx/playwright": "21.2.0",
-    "@nx/react": "21.2.0",
-    "@nx/storybook": "21.2.0",
-    "@nx/vite": "21.2.0",
-    "@nx/web": "21.2.0",
+    "@nx/angular": "22.1.1",
+    "@nx/devkit": "22.1.1",
+    "@nx/eslint": "22.1.1",
+    "@nx/eslint-plugin": "22.1.1",
+    "@nx/js": "22.1.1",
+    "@nx/playwright": "22.1.1",
+    "@nx/react": "22.1.1",
+    "@nx/storybook": "22.1.1",
+    "@nx/vite": "22.1.1",
+    "@nx/web": "22.1.1",
     "@playwright/test": "^1.56.1",
-    "@schematics/angular": "20.0.2",
+    "@schematics/angular": "20.3.9",
     "@storybook/addon-docs": "^9.1.16",
-    "@storybook/angular": "^9.1.16",
+    "@storybook/angular": "10.0.8",
     "@swc-node/register": "~1.9.2",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.29",
@@ -51,18 +51,21 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "lint-staged": "^15.5.2",
-    "nx": "^21.2.0",
+    "nx": "22.1.1",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "postcss-import": "^16.1.1",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
-    "storybook": "^9.1.16",
+    "storybook": "10.0.8",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
+    "typescript": "5.9.3",
     "typescript-eslint": "^8.47.0",
-    "vite": "^6.4.1",
+    "vite": "7.2.4",
     "vite-plugin-dts": "~4.5.4",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "@angular/core": "20.3.13"
   }
 }
