chore: add `@storybook/test`-package

--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@nx/web": "22.1.1",
     "@playwright/test": "^1.56.1",
     "@schematics/angular": "20.3.9",
-    "@storybook/addon-docs": "^9.1.16",
+    "@storybook/addon-docs": "10.0.8",
     "@storybook/angular": "10.0.8",
+    "@storybook/test": "^8.6.14",
     "@swc-node/register": "~1.9.2",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.29",
