chore: storybook builds

--- a/packages/angular/tsconfig.lib.json
+++ b/packages/angular/tsconfig.lib.json
@@ -23,8 +23,6 @@
     "src/**/*.spec.js",
     "src/**/*.test.jsx",
     "src/**/*.spec.jsx",
-    "src/test-setup.ts",
-    "**/*.stories.ts",
-    "**/*.stories.js"
+    "src/test-setup.ts"
   ]
 }
