--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 public-hoist-pattern[]=@angular/platform-browser*
 public-hoist-pattern[]=@angular/core*
+public-hoist-pattern[]=@analogjs/storybook-angular
