--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "typescript-eslint": "^8.47.0",
     "vite": "7.2.4",
     "vite-plugin-dts": "~4.5.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@analogjs/storybook-angular": "~2.1.0",
+    "@analogjs/vite-plugin-angular": "~2.1.0",
+    "@analogjs/vitest-angular": "~2.1.0"
   }
 }
