--- a/apps/angular-demo/package.json
+++ b/apps/angular-demo/package.json
@@ -1,25 +1,22 @@
 {
   "name": "angular-demo",
-  "type": "module",
   "scripts": {
     "build": "vite build"
   },
   "dependencies": {
-    "@angular/animations": "~20.3.9",
-    "@angular/common": "~20.3.9",
-    "@angular/core": "~20.3.9",
-    "@angular/platform-browser": "~20.3.9",
-    "@angular/platform-server": "~20.3.9",
+    "@angular/animations": "20.3.9",
+    "@angular/common": "20.3.9",
+    "@angular/core": "20.3.9",
+    "@angular/platform-browser": "20.3.9",
+    "@angular/platform-server": "20.3.9",
     "@ks-digital/designsystem-angular": "workspace:*",
     "@ks-digital/designsystem-themes": "workspace:*"
   },
   "devDependencies": {
-    "@analogjs/vite-plugin-angular": "~2.0.5",
-    "@analogjs/vitest-angular": "~2.0.5",
-    "@angular-devkit/build-angular": "~20.3.9",
-    "@angular/build": "^20.3.9",
-    "@angular/compiler": "^20.3.9",
-    "@angular/compiler-cli": "^20.3.9",
+    "@angular-devkit/build-angular": "20.3.9",
+    "@angular/build": "20.3.9",
+    "@angular/compiler": "20.3.9",
+    "@angular/compiler-cli": "20.3.9",
     "@testing-library/angular": "^17.4.0",
     "angular-eslint": "^20.6.0"
   }
