--- a/apps/angular-demo/package.json
+++ b/apps/angular-demo/package.json
@@ -18,6 +18,7 @@
     "@angular/compiler": "20.3.9",
     "@angular/compiler-cli": "20.3.9",
     "@testing-library/angular": "^17.4.0",
-    "angular-eslint": "^20.6.0"
+    "angular-eslint": "^20.6.0",
+    "zone.js": "^0.16.0"
   }
 }
