--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "node": "22.14.0"
   },
   "devDependencies": {
+    "@analogjs/storybook-angular": "~2.1.0",
+    "@analogjs/vite-plugin-angular": "~2.1.0",
+    "@analogjs/vitest-angular": "~2.1.0",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@nx/angular": "22.1.1",
@@ -64,9 +67,6 @@
     "typescript-eslint": "^8.47.0",
     "vite": "7.2.4",
     "vite-plugin-dts": "~4.5.4",
-    "vitest": "^3.2.4",
-    "@analogjs/storybook-angular": "~2.1.0",
-    "@analogjs/vite-plugin-angular": "~2.1.0",
-    "@analogjs/vitest-angular": "~2.1.0"
+    "vitest": "^3.2.4"
   }
 }
