--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "postcss-import": "^16.1.1",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
+    "rimraf": "^6.0.1",
     "storybook": "10.0.8",
     "tslib": "^2.8.1",
+    "tsx": "^4.20.6",
     "typescript": "5.9.3",
     "typescript-eslint": "^8.47.0",
-    "vite": "7.2.4",
+    "vite": "6.4.0",
     "vite-plugin-dts": "~4.5.4",
     "vitest": "^3.2.4"
   },
