--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -42,6 +42,6 @@
     "angular-eslint": "^20.6.0",
     "jsdom": "~22.1.0",
     "ng-packagr": "^20.3.2",
-    "zone.js": "^0.16.0"
+    "zone.js": "~0.15.0"
   }
 }
