--- a/package.json
+++ b/package.json
@@ -1,69 +1,74 @@
 {
   "name": "designsystem",
-  "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "format": "prettier --write .",
-    "prepare": "husky",
-    "build-storybook": "pnpm nx run @ks-digital/designsystem-angular:build-storybook",
-    "chromatic": "npx chromatic --project-token=chpt_086af95d74cc9bd"
-  },
-  "author": "KS Digital",
   "license": "MIT",
-  "packageManager": "pnpm@10.21.0+sha512.da3337267e400fdd3d479a6c68079ac6db01d8ca4f67572083e722775a796788a7a9956613749e000fac20d424b594f7a791a5f4e2e13581c5ef947f26968a40",
-  "engines": {
-    "node": "22.14.0"
+  "author": "KS Digital",
+  "scripts": {
+    "build-storybook": "pnpm nx run @ks-digital/designsystem-angular:build-storybook",
+    "chromatic": "npx chromatic --project-token=chpt_086af95d74cc9bd",
+    "format": "prettier --write .",
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "@analogjs/storybook-angular": "~2.1.0",
+    "@analogjs/vite-plugin-angular": "~2.1.0",
+    "@analogjs/vitest-angular": "~2.1.0",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@nx/angular": "21.2.0",
-    "@nx/devkit": "21.2.0",
-    "@nx/eslint": "21.2.0",
-    "@nx/eslint-plugin": "21.2.0",
-    "@nx/js": "21.2.0",
-    "@nx/playwright": "21.2.0",
-    "@nx/react": "21.2.0",
-    "@nx/storybook": "21.2.0",
-    "@nx/vite": "21.2.0",
-    "@nx/web": "21.2.0",
-    "@playwright/test": "^1.54.2",
-    "@schematics/angular": "20.0.2",
-    "@storybook/addon-docs": "^9.1.1",
-    "@storybook/angular": "9.0.12",
+    "@nx/angular": "22.1.1",
+    "@nx/devkit": "22.1.1",
+    "@nx/eslint": "22.1.1",
+    "@nx/eslint-plugin": "22.1.1",
+    "@nx/js": "22.1.1",
+    "@nx/playwright": "22.1.1",
+    "@nx/react": "22.1.1",
+    "@nx/storybook": "22.1.1",
+    "@nx/vite": "22.1.1",
+    "@nx/web": "22.1.1",
+    "@playwright/test": "^1.56.1",
+    "@schematics/angular": "20.3.9",
+    "@storybook/addon-docs": "10.0.8",
+    "@storybook/angular": "10.0.8",
+    "@storybook/test": "^8.6.14",
     "@swc-node/register": "~1.9.2",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.29",
     "@swc/helpers": "~0.5.17",
     "@testing-library/dom": "10.4.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^20.19.10",
-    "@typescript-eslint/utils": "^8.39.0",
+    "@types/node": "^20.19.25",
+    "@typescript-eslint/utils": "^8.47.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
-    "chromatic": "^13.2.0",
-    "eslint": "^9.33.0",
+    "@vitest/ui": "^4.0.12",
+    "chromatic": "^13.3.4",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-playwright": "^1.8.3",
     "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.3.0",
+    "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "lint-staged": "^15.5.2",
-    "nx": "21.2.0",
+    "nx": "22.1.1",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "postcss-import": "^16.1.1",
     "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.2.0",
-    "storybook": "9.1.15",
-    "ts-node": "10.9.1",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "rimraf": "^6.0.1",
+    "storybook": "10.0.8",
     "tslib": "^2.8.1",
-    "typescript": "5.8.3",
-    "typescript-eslint": "^8.39.0",
-    "vite": "^6.4.1",
+    "tsx": "^4.20.6",
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.47.0",
+    "vite": "7.2.4",
     "vite-plugin-dts": "~4.5.4",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.12"
+  },
+  "packageManager": "pnpm@10.23.0+sha512.21c4e5698002ade97e4efe8b8b4a89a8de3c85a37919f957e7a0f30f38fbc5bbdd05980ffe29179b2fb6e6e691242e098d945d1601772cad0fef5fb6411e2a4b",
+  "engines": {
+    "node": "22.14.0"
   }
 }
