--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -11,39 +11,30 @@
   "publishConfig": {
     "access": "public"
   },
-  "type": "module",
-  "files": [
-    "./dist"
-  ],
-  "main": "./dist/fesm2022/ks-digital-designsystem-angular.mjs",
-  "types": "./dist/index.d.ts",
   "dependencies": {
-    "@floating-ui/dom": "^1.7.3",
-    "@u-elements/u-details": "^0.1.2"
+    "@floating-ui/dom": "^1.7.4",
+    "@u-elements/u-details": "^0.1.5"
   },
   "peerDependencies": {
     "@angular/common": ">=20.0.0",
     "@angular/core": ">=20.0.0"
   },
   "devDependencies": {
-    "@analogjs/storybook-angular": "^1.19.4",
-    "@analogjs/vite-plugin-angular": "~1.17.1",
-    "@analogjs/vitest-angular": "~1.17.1",
+    "@angular-devkit/build-angular": "20.3.9",
     "@angular-eslint/builder": "^20.6.0",
     "@angular-eslint/bundled-angular-compiler": "^20.6.0",
     "@angular-eslint/eslint-plugin": "^20.6.0",
     "@angular-eslint/eslint-plugin-template": "^20.6.0",
     "@angular-eslint/schematics": "^20.6.0",
     "@angular-eslint/template-parser": "^20.6.0",
-    "@ng-icons/core": "^32.1.0",
-    "@ng-icons/phosphor-icons": "^32.2.0",
+    "@angular/platform-browser": "20.3.9",
+    "@ng-icons/core": "^32.5.0",
+    "@ng-icons/phosphor-icons": "^32.5.0",
     "@testing-library/angular": "^17.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "^6.9.1",
     "angular-eslint": "^20.6.0",
     "jsdom": "~22.1.0",
-    "ng-packagr": "^20.0.1"
-  },
-  "scripts": {
-    "build": "ng-packagr -p ng-package.json"
+    "ng-packagr": "^20.3.2",
+    "zone.js": "~0.15.0"
   }
 }
