build: update designsystemet to 1.7.3

--- a/packages/angular/project.json
+++ b/packages/angular/project.json
@@ -11,6 +11,7 @@
       "dependsOn": ["@ks-digital/designsystem-themes:build"],
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
+        "tsConfig": "packages/angular/tsconfig.lib.prod.json",
         "project": "packages/angular/ng-package.json"
       },
       "configurations": {
