fix(angular): correct release path

--- a/nx.json
+++ b/nx.json
@@ -71,6 +71,13 @@
     }
   ],
   "targetDefaults": {
+    "nx-release-publish": {
+      "inputs": ["production", "^production"],
+      "options": {
+        "packageRoot": "dist/{projectRoot}",
+        "verbose": true
+      }
+    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["{projectRoot}/dist"],
