--- a/packages/angular/project.json
+++ b/packages/angular/project.json
@@ -75,6 +75,12 @@
           "buildTarget": "@ks-digital/designsystem-angular:build-storybook:ci"
         }
       }
+    },
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": "dist/{projectRoot}",
+        "verbose": true
+      }
     }
   }
 }
