fix(angular): correct release path (#142)

--- a/nx.json
+++ b/nx.json
@@ -71,6 +71,9 @@
     }
   ],
   "targetDefaults": {
+    "nx-release-publish": {
+      "inputs": ["production", "^production"]
+    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["{projectRoot}/dist"],
