--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,32 +19,56 @@
       "@ks-digital/designsystem-angular/utils": [
         "packages/angular/utils/index.ts"
       ],
-      "@ks-digital/designsystem-angular/alert": ["packages/angular/alert"],
-      "@ks-digital/designsystem-angular/button": ["packages/angular/button"],
-      "@ks-digital/designsystem-angular/card": ["packages/angular/card"],
+      "@ks-digital/designsystem-angular/alert": [
+        "packages/angular/alert/index.ts"
+      ],
+      "@ks-digital/designsystem-angular/button": [
+        "packages/angular/button/index.ts"
+      ],
+      "@ks-digital/designsystem-angular/card": [
+        "packages/angular/card/index.ts"
+      ],
       "@ks-digital/designsystem-angular/checkbox": [
-        "packages/angular/checkbox"
+        "packages/angular/checkbox/index.ts"
       ],
-      "@ks-digital/designsystem-angular/details": ["packages/angular/details"],
-      "@ks-digital/designsystem-angular/field": ["packages/angular/field"],
+      "@ks-digital/designsystem-angular/details": [
+        "packages/angular/details/index.ts"
+      ],
+      "@ks-digital/designsystem-angular/field": [
+        "packages/angular/field/index.ts"
+      ],
       "@ks-digital/designsystem-angular/fieldset": [
-        "packages/angular/fieldset"
+        "packages/angular/fieldset/index.ts"
       ],
-      "@ks-digital/designsystem-angular/input": ["packages/angular/input"],
-      "@ks-digital/designsystem-angular/label": ["packages/angular/label"],
+      "@ks-digital/designsystem-angular/input": [
+        "packages/angular/input/index.ts"
+      ],
+      "@ks-digital/designsystem-angular/label": [
+        "packages/angular/label/index.ts"
+      ],
       "@ks-digital/designsystem-angular/paragraph": [
-        "packages/angular/paragraph"
+        "packages/angular/paragraph/index.ts"
       ],
-      "@ks-digital/designsystem-angular/popover": ["packages/angular/popover"],
-      "@ks-digital/designsystem-angular/radio": ["packages/angular/radio"],
-      "@ks-digital/designsystem-angular/search": ["packages/angular/search"],
-      "@ks-digital/designsystem-angular/spinner": ["packages/angular/spinner"],
-      "@ks-digital/designsystem-angular/switch": ["packages/angular/switch"],
+      "@ks-digital/designsystem-angular/popover": [
+        "packages/angular/popover/index.ts"
+      ],
+      "@ks-digital/designsystem-angular/radio": [
+        "packages/angular/radio/index.ts"
+      ],
+      "@ks-digital/designsystem-angular/search": [
+        "packages/angular/search/index.ts"
+      ],
+      "@ks-digital/designsystem-angular/spinner": [
+        "packages/angular/spinner/index.ts"
+      ],
+      "@ks-digital/designsystem-angular/switch": [
+        "packages/angular/switch/index.ts"
+      ],
       "@ks-digital/designsystem-angular/textarea": [
-        "packages/angular/textarea"
+        "packages/angular/textarea/index.ts"
       ],
       "@ks-digital/designsystem-angular/validation-message": [
-        "packages/angular/validation-message"
+        "packages/angular/validation-message/index.ts"
       ],
       "@ks-digital/designsystem-react": ["packages/react/src/index.ts"],
       "@ks-digital/designsystem-themes": ["packages/themes/src/index.ts"]
