--- a/packages/angular/tsconfig.lib.json
+++ b/packages/angular/tsconfig.lib.json
@@ -7,22 +7,18 @@
     "inlineSources": true,
     "types": []
   },
-  "include": ["src/**/*.ts", "src/typings.d.ts"],
+  "include": ["**/*.ts"],
   "exclude": [
     "vite.config.ts",
     "vite.config.mts",
     "vitest.config.ts",
     "vitest.config.mts",
-    "src/**/*.spec.ts",
-    "src/test-setup.ts",
+    "**/*.spec.ts",
+    "**/*.mdx",
+    "test-setup.ts",
     "jest.config.ts",
-    "src/**/*.test.ts",
-    "src/**/*.test.tsx",
-    "src/**/*.spec.tsx",
-    "src/**/*.test.js",
-    "src/**/*.spec.js",
-    "src/**/*.test.jsx",
-    "src/**/*.spec.jsx",
-    "src/test-setup.ts"
+    "**/*.test.ts",
+    "**/*.stories.ts",
+    "**/*.stories.js"
   ]
 }
