--- a/packages/angular/tsconfig.spec.json
+++ b/packages/angular/tsconfig.spec.json
@@ -16,15 +16,10 @@
     "vite.config.mts",
     "vitest.config.ts",
     "vitest.config.mts",
-    "**/*/*.test.ts",
-    "**/*/*.spec.ts",
-    "**/*/*.test.tsx",
-    "**/*/*.spec.tsx",
-    "**/*/*.test.js",
-    "**/*/*.spec.js",
-    "**/*/*.test.jsx",
-    "**/*/*.spec.jsx",
-    "**/*/*.d.ts"
+    "jest.config.ts",
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "**/*.d.ts"
   ],
   "files": ["src/test-setup.ts"]
 }
