--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
     "storybook": "10.0.8",
+    "ts-morph": "^27.0.2",
     "tslib": "^2.8.1",
     "tsx": "^4.20.6",
     "typescript": "5.9.3",
