--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -13,6 +13,8 @@
   },
   "type": "module",
   "exports": {
+    "./types.d.ts": "./dist/themes/types.d.ts",
+    "./colors.d.ts": "./dist/themes/colors.d.ts",
     "./base.css": "./dist/base.css",
     "./base.tailwind.css": "./dist/base.tailwind.css",
     "./ledsagerbevis.css": "./dist/themes/ledsagerbevis.css",
