--- a/designsystemet.config.json
+++ b/designsystemet.config.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "./node_modules/@digdir/designsystemet/dist/config.schema.json",
   "outDir": "./design-tokens",
   "clean": true,
   "themes": {
