--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,8 +25,8 @@
     "./dist"
   ],
   "dependencies": {
-    "@digdir/designsystemet-react": "1.7.3",
-    "@navikt/aksel-icons": "^7.33.4"
+    "@digdir/designsystemet-react": "catalog:designsystemet",
+    "@navikt/aksel-icons": "catalog:designsystemet"
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.0",
