--- a/.github/actions/install-packages/action.yml
+++ b/.github/actions/install-packages/action.yml
@@ -5,8 +5,8 @@ runs:
   using: 'composite'
   steps:
     - name: Install pnpm
-      uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # 4.1.0
-    - uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # 5.0.0
+      uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
+    - uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
       with:
         node-version-file: 'package.json'
         cache: 'pnpm'
@@ -16,7 +16,7 @@ runs:
     - run: pnpm install --frozen-lockfile --prefer-offline
       shell: bash
     - name: Set SHAs
-      uses: nrwl/nx-set-shas@826660b82addbef3abff5fa871492ebad618c9e1 # 4.3.3
+      uses: nrwl/nx-set-shas@3e9ad7370203c1e93d109be57f3b72eb0eb511b1 # v4.4.0
     - run: |
         echo "BASE: ${{ env.NX_BASE }}"
         echo "HEAD: ${{ env.NX_HEAD }}"
