fix(angular/link): added alias to tsconfig

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -37,6 +37,9 @@
       "@ks-digital/designsystem-angular/pagination": [
         "packages/angular/pagination/src/index.ts"
       ],
+      "@ks-digital/designsystem-angular/link": [
+        "packages/angular/link/src/index.ts"
+      ],
       "@ks-digital/designsystem-angular/paragraph": [
         "packages/angular/paragraph/src/index.ts"
       ],
