Revert "chore: dont remove primary, needs more discussion. introduce #ffffff-primary for tilskudd instead"
This reverts commit d6eb4901c487bee1bf7494c759d6c767f04567a9.

--- a/designsystemet.config.json
+++ b/designsystemet.config.json
@@ -5,7 +5,7 @@
   "themes": {
     "forvaltning": {
       "colors": {
-        "main": { "accent": "#714EEA", "primary": "#00042E" },
+        "main": { "accent": "#00042E" },
         "neutral": "#1D252D",
         "support": {}
       },
@@ -13,7 +13,7 @@
     },
     "minkommune": {
       "colors": {
-        "main": { "accent": "#714EEA", "primary": "#00042E" },
+        "main": { "accent": "#00042E" },
         "neutral": "#1D252D",
         "support": {}
       },
@@ -21,7 +21,7 @@
     },
     "ledsagerbevis": {
       "colors": {
-        "main": { "accent": "#1AA87E", "primary": "#2B5246" },
+        "main": { "accent": "#2B5246" },
         "neutral": "#1E2422",
         "support": {}
       },
@@ -30,8 +30,7 @@
     "tilskudd": {
       "colors": {
         "main": {
-          "accent": "#31373D",
-          "primary": "#ffffff"
+          "accent": "#31373D"
         },
         "support": {},
         "neutral": "#4D524D"
