fix(angular): depends on themes, since we need types

--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -17,7 +17,8 @@
   },
   "peerDependencies": {
     "@angular/common": "catalog:angular-supported-versions",
-    "@angular/core": "catalog:angular-supported-versions"
+    "@angular/core": "catalog:angular-supported-versions",
+    "@ks-digital/designsystem-themes": "workspace:*"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "catalog:angular",
